Update 'pxeicpx23-java-quarkus' component image to: quay.io/rhtap_qe/rhtap-qe-java-quarkus:010700659471750adc62a9d98aab71957d3bcbb3@sha256:1d7ddaee1ca249b491f00301363bfce22a3056aa22a2409431657c269151d30e

--- a/components/pxeicpx23-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/pxeicpx23-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: pxeicpx23-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-quarkus:010700659471750adc62a9d98aab71957d3bcbb3@sha256:1d7ddaee1ca249b491f00301363bfce22a3056aa22a2409431657c269151d30e
+          name: container-image
